Fixing width and always on scrollbar issue

--- a/src/assets/PullRequestList.css
+++ b/src/assets/PullRequestList.css
@@ -1,7 +1,6 @@
 .container {
   margin: 0 auto;
   padding: 2rem;
-  width: 100vw;
 }
 
 .header {
